--- a/backend/app/views/public/index.html.erb
+++ b/backend/app/views/public/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Public#index</h1>
-<p>Find me in app/views/public/index.html.erb</p>
+<p><%= link_to 'Secret area only accesible by authenticated users (Oauth2)', secret_area_path %></p>
 <p>
   <%= link_to 'Edit profile', edit_user_registration_path if user_signed_in? %>
   <%= link_to 'Login', edit_user_registration_path unless user_signed_in? %>
