--- a/frontend/app/views/main.html
+++ b/frontend/app/views/main.html
@@ -1,3 +1,5 @@
+<login-link></login-link>
+
 <div class="header">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="#">Home</a></li>
