--- a/backend/app/views/public/index.html.erb
+++ b/backend/app/views/public/index.html.erb
@@ -3,6 +3,6 @@
 <p>
   <%= link_to 'Edit profile', edit_user_registration_path if user_signed_in? %>
   <%= link_to 'Login with Devise', edit_user_registration_path unless user_signed_in? %>
-  <%= link_to "Sign in with Doorkeeper", user_omniauth_authorize_path(:doorkeeper) unless user_signed_in?  %>
+  <%= link_to 'Sign in with Doorkeeper', user_omniauth_authorize_path(:doorkeeper) unless user_signed_in?  %>
 </p>
 <p><%= link_to 'Logout', destroy_user_session_path, method: :delete if user_signed_in? %></p>
